fix some spacing stuff

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -35,6 +35,9 @@ $sidebar-width: 300px;
   margin-top: $header-height;
   min-height: 100%;
   position: relative;
+}
+
+.mb-100 {
   margin-bottom: 100vh;
 }
 
